--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-/example/data/
 
 # Spyder project settings
 .spyderproject
@@ -160,3 +159,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 /example/data/
+/example/POD/
