UPDATE: .gitignore so example images are not updated in repo

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,7 @@ cython_debug/
 /example/data/
 /example/POD/
 /example/big data/
+/example/images/bigdata-example.png
+/example/images/jetconc-example.png
+/example/images/jetstatistics-example.png
+/example/images/pressure-example.png
