--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,4 @@ cython_debug/
 /example/images/jetconc-example.png
 /example/images/jetstatistics-example.png
 /example/images/pressure-example.png
+/example/images/phasePOD_mode_1-example.png
